# serial

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/remote_serial/: factory.hpp  implementation.hpp  interface.hpp  interface_remote.hpp  node.hpp  port.hpp  utils.hpp  worker.hpp
include/ros2_serial/: factory.hpp  implementation.hpp  interface.hpp  interface_remote.hpp  node.hpp  port.hpp  utils.hpp  worker.hpp
include/serial/: factory.hpp  implementation.hpp  interface.hpp  interface_native.hpp  interface_remote.hpp  interface_ros.hpp  node.hpp  port.hpp  utils.hpp  worker.hpp
src/: factory.cpp  implementation.cpp  interface.cpp  interface_remote.cpp  interface_ros.cpp  main.cpp  node.cpp  port.cpp  worker.cpp
test/: pipe1.py  pipe1_launch.py
test/lib/: serial_test.py
